--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-search-bar": "^3.5.1",
     "react-native-section-alphabet-list": "^2.0.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
